OEEex.css
.OEEexHide,
.OEEexHide+div,
.OEEexHide+div+div,
.OEEexHide+div+div+div,
.OEEexHide+div+div+div+div{
	display: none;
}
.OEEexHide+hr.divider,
.OEEexHide+div+hr.divider,
.OEEexHide+div+div+hr.divider,
.OEEexHide+div+div+div+hr.divider,
.OEEexHide+div+div+div+div+hr.divider{
	display: none;
}
.OEEexVerbose{
	background-color: #b5fffe;
}

.dark .OEEexVerbose{
	background-color: #005e5d;
}

.OEEexUploadButton iron-icon{
	min-width: 30px;
	box-shadow: rgb(0 0 0 / 12%) 0px 1px 3px, rgb(0 0 0 / 24%) 0px 1px 2px;
	color: var(--ee-legacy-blue);
	font-size: var(--ee-button-font-size);
	min-height: 30px;
}

.OEEexUploadButton.dragover iron-icon{
	color: blueviolet;
}

ee-console-log.OEEexTerminal{
	position: absolute;
	bottom: -30px;
	width: 98%;
}

ee-console-log.OEEexTerminal div{
	display: inline-grid;
	width: calc( 99% - 18px);
	margin: 0!important;
	background-color: transparent!important;
}

ee-console-log.OEEexTerminal input.jfk-textinput{
	border: none;
	background-color: transparent;
}

ee-console-log.OEEexTerminal input.jfk-textinput:focus{
	box-shadow: none;
}

ee-console-log.OEEexTerminal input::placeholder{
	color: transparent;
}

ee-tab-panel ee-tab:nth-child(2){
	height: calc(100% - 45px);
}

.oeeex-ai-button span{
	font-size: 1.7em;
	display: inline-block;
	transform: translateY(-0.25em);
	text-shadow: 0 0 1px black;
}
.oeeex-ai-button:disabled {
	filter: grayscale(1);
}

.ace_dark .ace_gutter-cell.oeeex-ai-comment.ace_info, .ace_gutter-cell.oeeex-ai-comment.ace_info{
	background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><text y="50%" x="50%" dy=".35em" text-anchor="middle" font-size="90">🧠</text></svg>');
	filter: grayscale(0.8);
}

.ace_dark .ace_gutter-cell.oeeex-ai-comment.ace_info:hover,.ace_gutter-cell.oeeex-ai-comment.ace_info:hover{
	filter: grayscale(0);
}

.oeeexAIInfo{
	background: linear-gradient(to right top, rgba(82, 73, 208, 0.5) 10%, rgba(208, 153, 250, 0.5));
    border-radius: 5px;
    padding-left: 13px;
    padding: 10px;
    margin: 2px;
    text-align: justify;
    animation-duration: 1s;
}

